plugins/javaFX/testData/highlighting/enumValues.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.layout.*?>
<?import javafx.scene.control.*?>

<GridPane xmlns:fx="http://javafx.com/fxml" alignment="center">
    <HBox alignment=<error descr="UNKNOWN is not withing its bounds">"UNKNOWN"</error>/>
</GridPane>